--- a/isaiah.html
+++ b/isaiah.html
@@ -3,6 +3,7 @@
 
 <head>
 	<head>
+	<meta name="viewport" content="width=device-width" />
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	</head>
 <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
