--- a/Website.html
+++ b/Website.html
@@ -10,6 +10,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Karma" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
   <style>
+	  
     /* Set height of the grid so .sidenav can be 100% (adjust if needed) */
     .row.content {height: 1500px}
     
@@ -17,6 +18,9 @@
     .sidenav {
       background-color: #41a0f4;
       height: 100%;
+    }
+    a {
+	font-family: 'Quicksand', sans-serif;
     }
     
     /* Set black background color, white text and some padding */
